<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/purple_200"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

    <!--   Untuk menampilkan judul catatan-->
        <TextView
            android:id="@+id/idJudulCatatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toStartOf="@id/idIVDelete"
            android:padding="4dp"
            android:text="@string/catatan"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <!--  Menampilkan icon delete-->
        <ImageView
            android:id="@+id/idIVDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:padding="3dp"
            android:src="@drawable/ic_baseline_delete_forever_24"
            app:tint="@color/white"
            android:contentDescription="@string/delete" />

<!--     Memampilkan teks "diperbarui"-->
        <TextView
            android:id="@+id/idTanggalCatatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idJudulCatatan"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_toStartOf="@id/idIVDelete"
            android:padding="4dp"
            android:text="@string/diperbarui"
            android:textColor="@color/white"
            android:textSize="12sp" />



    </RelativeLayout>

</androidx.cardview.widget.CardView>
